--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/react-blender-nodes.umd.cjs",
+  "module": "./dist/react-blender-nodes.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/react-blender-nodes.es.js",
+      "require": "./dist/react-blender-nodes.umd.cjs"
+    },
+    "./style.css": "./dist/react-blender-nodes.css"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -12,11 +26,13 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "dependencies": {
-    "@xyflow/react": "^12.8.2",
-    "prettier": "^3.6.2",
+  "peerDependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
+  },
+  "dependencies": {
+    "@xyflow/react": "^12.8.2",
+    "prettier": "^3.6.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
@@ -25,6 +41,8 @@
     "@storybook/addon-docs": "^9.1.1",
     "@storybook/addon-vitest": "^9.1.1",
     "@storybook/react-vite": "^9.1.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
@@ -37,9 +55,11 @@
     "globals": "^16.3.0",
     "playwright": "^1.54.2",
     "storybook": "^9.1.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   }
 }
