--- a/package.json
+++ b/package.json
@@ -31,8 +31,13 @@
     "react-dom": "^19.1.1"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@xyflow/react": "^12.8.2",
-    "prettier": "^3.6.2"
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
+    "prettier": "^3.6.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
@@ -56,6 +61,7 @@
     "playwright": "^1.54.2",
     "storybook": "^9.1.1",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0",
