--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.1.1"
   },
   "dependencies": {
+    "@fontsource/dejavu-sans": "^5.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@xyflow/react": "^12.8.2",
     "class-variance-authority": "^0.7.1",
