--- a/.github/workflows/storybook-deploy.yml
+++ b/.github/workflows/storybook-deploy.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: '20.x'
     
     - name: Install Dependencies
-      run: npm run ci
+      run: npm ci
 
     - name: Build
       run: npm run build-storybook
