--- a/.github/workflows/storybook-deploy.yml
+++ b/.github/workflows/storybook-deploy.yml
@@ -33,7 +33,9 @@ jobs:
 
   # Deployment job
   deploy:
-    if: $GITHUB_EVENT_NAME == 'push' && $GITHUB_REF == 'refs/heads/main'
+    if:
+      ${{ github.event_name == 'push' }} && ${{ github.ref == 'refs/heads/main'
+      }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
