--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,9 @@ updates:
     # Check the npm registry for updates every day (weekdays)
     schedule:
       interval: 'weekly'
+
+    # Create a single PR for all npm dependencies
+    group:
+      npmDependencies:
+        patterns:
+          - '*'
