--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "globals": "^16.3.0",
     "playwright": "^1.54.2",
     "storybook": "^9.1.1",
+    "storybook-addon-test-codegen": "^2.0.1",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
