Added npm deploy pipeline

--- a/.github/workflows/library-deploy.yml
+++ b/.github/workflows/library-deploy.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build-library:
     runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      id-token: write
     concurrency: ci-${{github.ref}}
 
     steps:
@@ -19,6 +22,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install Dependencies
         run: npm ci
@@ -26,25 +30,31 @@ jobs:
       - name: Build Library
         run: npm run build
 
-  # TODO: Need to figure out how to deploy the library to npm
-  #     - name: Upload artifact
-  #       uses: actions/upload-pages-artifact@v3
-  #       with:
-  #         path: dist
+  # Deployment job
+  deploy-library:
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-22.04
+    needs: build-library
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - name: Checkout to repo in current branch
+        uses: actions/checkout@v5
 
-  # # Deployment job
-  # deploy-library:
-  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-  #   environment:
-  #     name: github-pages
-  #     url: ${{ steps.deployment.outputs.page_url }}
-  #   runs-on: ubuntu-22.04
-  #   needs: build-library
-  #   permissions:
-  #     id-token: write
-  #     pages: write
-  #   steps:
-  #     - name: Deploy to GitHub Pages
-  #       uses: actions/deploy-pages@v4
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build Library
+        run: npm run build
+
+      - name: Deploy to NPM
+        run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
