--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TheClearSky/react-blender-nodes"
+    "url": "git+https://github.com/TheClearSky/react-blender-nodes.git"
   },
   "homepage": "https://github.com/TheClearSky/react-blender-nodes",
   "keywords": [
