--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
     "vite": "^7.1.4",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
