--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
     "@fontsource/dejavu-sans": "^5.2.5",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@xyflow/react": "^12.8.4",
     "class-variance-authority": "^0.7.1",
