--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "build-storybook": "storybook build",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "checklist": "npm run pretty && npm i && npm run build && npm run build-storybook"
+    "checklist": "npm run prepare && npm run pretty && npm i && npm run build && npm run build-storybook",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "react": "^19.1.1",
@@ -57,7 +58,9 @@
     "@xyflow/react": "^12.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "husky": "^9.1.7",
     "immer": "^10.1.3",
+    "lint-staged": "^16.2.6",
     "lucide-react": "^0.542.0",
     "prettier": "^3.6.2",
     "tailwind-merge": "^3.3.1",
@@ -96,5 +99,15 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*": [
+      "npm run pretty"
+    ]
   }
 }
