--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "checklist": "npm run prepare && npm run pretty && npm i && npm run build && npm run build-storybook",
+    "cl": "npm run checklist",
     "prepare": "husky"
   },
   "peerDependencies": {
@@ -67,7 +68,6 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/js": "^9.35.0",
     "@storybook/addon-a11y": "^9.1.5",
     "@storybook/addon-docs": "^9.1.5",
